chore: add pyproject.toml packaging + tooling config (setuptools, black, isort, flake8)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,21 +1,36 @@
-# pyproject.toml
+[build-system]
+requires = ["setuptools>=61.0", "wheel"]
+build-backend = "setuptools.build_meta"
+
+[project]
+name = "ecommerce-etl"
+version = "0.1.0"
+description = "End-to-end ETL demo: scrape -> transform -> load"
+readme = "README.md"
+authors = [{name = "Your Name"}]
+license = {text = "MIT"}
+
+[tool.setuptools.packages.find]
+where = ["src"]
 
 [tool.black]
 line-length = 88
-target-version = ["py310"]
-
-# If you prefer Black to not change string quotes, keep this false (default)
-skip-string-normalization = false
+target-version = ["py311"]
 
 [tool.isort]
 profile = "black"
 line_length = 88
-
-# Treat src/ package as first-party so imports are ordered correctly
 known_first_party = ["src"]
-
-# Common third-party libs used (helps isort grouping)
-known_third_party = ["pandas", "numpy", "requests", "sqlalchemy", "bs4", "pandera", "prefect", "pytest"]
+known_third_party = [
+  "pandas",
+  "numpy",
+  "requests",
+  "sqlalchemy",
+  "bs4",
+  "pandera",
+  "prefect",
+  "pytest",
+]
 multi_line_output = 3
 include_trailing_comma = true
 combine_as_imports = true
@@ -23,8 +38,6 @@ combine_as_imports = true
 [tool.flake8]
 max-line-length = 88
 extend-ignore = ["E203", "W503"]
-
-# Exclude typical folders
 exclude = [".git", "__pycache__", ".venv", "build", "dist", "docs", "docker", "outputs", "data"]
 
 [tool.pytest.ini_options]
